--- a/about/style.css
+++ b/about/style.css
@@ -4,6 +4,11 @@
   --gradient: linear-gradient(-145deg, #00afb5 20.37%, #00477733 57.73%);
   --gradient-2: #2c2d2f;
   --def-transition-duration: 0.2s;
+  --gradient-3: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(44, 45, 47, 1) 100%
+  );
 }
 * {
   margin: 0;
@@ -11,9 +16,87 @@
   box-sizing: border-box;
   font-family: "IBM Plex Sans", sans-serif;
 }
+/* styles.css */
+main {
+  left: 300px;
+  width: 75%;
+  box-sizing: border-box;
+}
+/* aside section*/
+ul li a {
+  transition-property: background-color, padding;
+  transition-duration: var(--def-transition-duration);
+  transition-timing-function: ease-in-out;
+}
+ul li a:hover {
+  background-color: #2c2d2f;
+  padding: 0.8rem 0.5rem;
+}
+.social-media {
+  transition: transform 0.4s ease-in;
+}
+.social-media:hover {
+  transform: scale(2);
+}
+/* About section */
 .right-container {
   width: 60%;
 }
 .left-container {
   width: 40%;
+}
+.gradient-text {
+  background-image: var(--gradient-3);
+  /* This will show the gradient as a text color rather than element bg. */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.box-text p span {
+  font-style: italic;
+  font-weight: 700;
+}
+.box-text a {
+  text-decoration: none;
+  color: #2c2d2f;
+  transition: transform 0.6s ease-in, color 0.6s ease-in;
+}
+
+.box-text a:hover {
+  color: rgb(38, 38, 241);
+  transform: scale(1.2);
+}
+
+.api {
+  background-color: var(--gradient-2);
+  color: white;
+}
+.quote-icon {
+  width: 25%;
+}
+.quote-icon i {
+  color: white;
+  font-size: 3rem;
+}
+.quote-text {
+  font-style: italic;
+  line-height: 1.8;
+}
+.my-experience {
+  box-sizing: border-box;
+  background: var(--gradient-3);
+  width: 100%;
+  color: white;
+  padding: 20px;
+}
+.myex-left {
+  text-align: justify;
+}
+.btn-about {
+  background: whitesmoke;
+  border: none;
+  transition: background 0.4s ease-in-out, color 0.4s ease-out;
+}
+.btn-about:hover {
+  background: var(--gradient-2);
+  color: whitesmoke;
 }
