--- a/home/styles.css
+++ b/home/styles.css
@@ -31,6 +31,7 @@ ul li a:hover {
 .social-media:hover {
   transform: scale(2);
 }
+
 /* Hero section */
 .hero-text {
   color: #141313;
@@ -73,7 +74,7 @@ ul li a:hover {
   background: var(--gradient);
   border-radius: 0.3em;
   border: none;
-  transition: backround 0.4s ease-in-out, color 0.4s ease-out;
+  transition: background 0.4s ease-in-out, color 0.4s ease-out;
 }
 .btn-hero:hover {
   background: var(--gradient-2);
