--- a/styles.css
+++ b/styles.css
@@ -13,26 +13,35 @@
 }
 
 body {
-  height: 100vh;
+  max-height: 100vh;
 }
 /* aside section*/
-ul li a {
+.nav-item {
   transition-property: background-color, padding;
   transition-duration: var(--def-transition-duration);
   transition-timing-function: ease-in-out;
 }
-ul li a:hover {
+.nav-item:hover {
   background-color: #2c2d2f;
-  padding: 0.8rem 0.5rem;
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.3rem;
 }
-.social-media {
-  transition: transform 0.4s ease-in;
+.bottom-list a:link {
+  transition: all 0.1s;
 }
-.social-media:hover {
-  transform: scale(2);
+.bottom-list a:link:hover {
+  font-size: 1.1rem;
 }
 
 /* Hero section */
+main {
+  right: 4rem;
+  position: relative;
+}
+main::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
 .hero-text {
   color: #141313;
   font-family: "IBM Plex Sans";
@@ -88,16 +97,49 @@ ul li a:hover {
 }
 /* floating icon */
 .blue-sosmed {
-  right: 0;
+  right: 1rem;
   position: fixed;
 }
-.blue-sosmed a i {
+.blue-sosmed a:link {
   transition: transform 0.3s ease !important;
 }
-.blue-sosmed a i:hover {
+.blue-sosmed a:link:hover {
   transform: scale(1.2) !important;
 }
 
 .blue-sosmed hr {
   border: 0.5px solid #00afb5;
+}
+
+@media (min-width: 300px) and (max-width: 768px) {
+  .hero {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .aside {
+    width: 60%;
+  }
+  .nav-item {
+    cursor: pointer;
+    margin-bottom: 1rem;
+    padding: 0.2rem 0.5rem;
+  }
+  .nav-item a {
+    display: none;
+    display: block;
+  }
+  main {
+    right: 1.5rem;
+  }
+  .hero-img img {
+    width: 90%;
+    position: relative;
+  }
+  .hero-text {
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 2rem;
+  }
 }
