--- a/works/style.css
+++ b/works/style.css
@@ -23,20 +23,22 @@ main {
   box-sizing: border-box;
 }
 /* aside section*/
-ul li a {
+/* aside section*/
+.nav-item {
   transition-property: background-color, padding;
   transition-duration: var(--def-transition-duration);
   transition-timing-function: ease-in-out;
 }
-ul li a:hover {
+.nav-item:hover {
   background-color: #2c2d2f;
-  padding: 0.8rem 0.5rem;
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.3rem;
 }
-.social-media {
-  transition: transform 0.4s ease-in;
+.bottom-list a:link {
+  transition: all 0.1s;
 }
-.social-media:hover {
-  transform: scale(2);
+.bottom-list a:link:hover {
+  font-size: 1.1rem;
 }
 /* Works section */
 .scroll-list {
