--- a/about/style.css
+++ b/about/style.css
@@ -57,15 +57,15 @@ main {
   font-style: italic;
   font-weight: 700;
 }
-.box-text a {
+.myCv {
   text-decoration: none;
   color: #2c2d2f;
-  transition: transform 0.6s ease-in, color 0.6s ease-in;
+  transition: all 0.3s ease-in;
 }
 
-.box-text a:hover {
+.myCv:hover {
   color: rgb(38, 38, 241);
-  transform: scale(1.2);
+  font-size: 1.2rem;
 }
 
 .api {
@@ -103,4 +103,21 @@ main {
 .btn-about:hover {
   background-color: var(--gradient-2);
   color: whitesmoke;
+}
+/* floating icon */
+.blue-sosmed {
+  position: fixed;
+  top: 50%;
+  right: 1rem;
+  transform: translate(0, -50%);
+}
+.blue-sosmed a:link {
+  transition: transform 0.3s ease !important;
+}
+.blue-sosmed a:link:hover {
+  transform: scale(1.2) !important;
+}
+
+.blue-sosmed hr {
+  border: 0.5px solid #00afb5;
 }
