--- a/contact/style.css
+++ b/contact/style.css
@@ -41,3 +41,21 @@ main {
   font-size: 1.1rem;
 }
 /* Contact section */
+
+/* floating icon */
+.blue-sosmed {
+  position: fixed;
+  top: 20%;
+  right: 1rem;
+  transform: translate(0, -50%);
+}
+.blue-sosmed a:link {
+  transition: transform 0.3s ease !important;
+}
+.blue-sosmed a:link:hover {
+  transform: scale(1.2) !important;
+}
+
+.blue-sosmed hr {
+  border: 0.5px solid #00afb5;
+}
